--- a/sentinel.conf
+++ b/sentinel.conf
@@ -1,6 +1,6 @@
 # specify path to vivo.conf or leave blank
 # default is the same as VivoCore
-#vivo_conf=/home/evan82/.vivocore/vivo.conf
+vivo_conf=/home/john/.glyno/glyno.conf
 
 # valid options are mainnet, testnet (default=mainnet)
 network=mainnet
